--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -213,3 +213,20 @@
     @apply bg-background text-foreground;
   }
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateX(-50%);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
+
+/* .animate-scroll:hover {
+  animation-play-state: paused;
+} */
